[package]
name = "type-sets"
version = "0.0.6"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["type-system", "sets", "type-sets", "type-level", "type"]
categories = []
description = "Sets implemented in the rust type-system"
homepage = "https://github.com/jvdwrf/type-sets"
repository = "https://github.com/jvdwrf/type-sets"
readme = "README.md"

[dependencies]
phf = "0.11.0"
csf = "0.1"